--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "tech",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Aditya-Yashwanth.github.io/tech-softwares",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
@@ -24,9 +23,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
